Fix vertical offset when jumping through test results.

--- a/src/fitnesse/resources/bootstrap/less/customize.less
+++ b/src/fitnesse/resources/bootstrap/less/customize.less
@@ -56,8 +56,8 @@ label {
 
 a[name] {
   position: relative;
-  display: block;
-  top: -140px;
+  display: inline-block;
+  top: -120px;
   visibility: hidden;
 }
 
